OrderController and Swagger update
