# routes/api.php
@@ -5,6 +5,7 @@ use App\Http\Middleware\JWTAuthenticate;
 use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\CategoryController;
 use App\Http\Controllers\API\ProductController;
+use App\Http\Controllers\API\OrderController;
 
 Route::group(['prefix' => 'v1', 'middleware' => ['api']], function () {
 
@@ -38,6 +39,24 @@ Route::group(['prefix' => 'v1', 'middleware' => ['api']], function () {
             Route::post('/', [ProductController::class, 'store']);
             Route::put('/{slug}', [ProductController::class, 'update']);
             Route::delete('/{slug}', [ProductController::class, 'destroy']);
+        });
+
+        // Review routes
+        Route::middleware([JWTAuthenticate::class, 'JWTAuthenticate'])->group(function () {
+            Route::post('{productId}/reviews', [ProductController::class, 'storeReview']);
+        });
+    });
+
+    Route::prefix('orders')->middleware(['api'])->group(function () {
+        // Public routes
+        Route::get('/', [OrderController::class, 'index']);
+        Route::get('/{id}', [OrderController::class, 'show']);
+
+        // All user routes
+        Route::middleware([JWTAuthenticate::class, 'JWTAuthenticate'])->group(function () {
+            Route::post('/', [OrderController::class, 'store']);
+            Route::put('/{id}', [OrderController::class, 'update']);
+            Route::delete('/{id}', [OrderController::class, 'destroy']);
         });
     });
 });
